<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:hint="@string/detail"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/bt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/bt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
<LinearLayout
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_weight=".6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:id="@+id/aaa"
        >
        <android.support.design.widget.TextInputEditText
            android:enabled="false"
            android:id="@+id/ed_loc"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:text=""
            android:hint="@string/location"
            />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/show_map"
        android:layout_weight=".4"
        android:layout_toRightOf="@+id/aaa"
        android:text="@string/show_map"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:src="@drawable/imageview_placeholder"
            android:id="@+id/im_receipt"
            android:layout_width="150dp"
            android:layout_height="100dp"
         />
        <Button
            android:background="@color/colorPrimary"
            android:id="@+id/btn_cam"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:text="@string/click_pic"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"/>

    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/delete_btn"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
</ScrollView>